# Defense-Prefix

./: .gitignore  apptainer.def  main.py  orchestrator.py  package-lock.json  pyproject.toml  readme.md  requirements.txt  train.py
datasets/: ImageNet100.py
datasets/utils/: make_dataset_train.py
dislexify/: defend.py  probes.py  zeroshot.py
dislexify/cache/: cache.py  collector.py  hooks.py  multi_head_attention.py
dislexify/dataset/: ImageNet100.py  ImageNet100Blurred.py  ImageNet100_adaptibe.py  __init__.py  base.py  bcn.py  chest_xray.py  disentangling.py  fgvc_aircraft.py  food101.py  ham10k.py  isic.py  melanoma.py  paint.py  rta100.py  scam.py  unsplash.py
dyslexify/: config.py  defend.py  probes.py  zeroshot.py
dyslexify/cache/: block.py  cache.py  collector.py
dyslexify/dataset/: ImageNet100.py  ImageNet100Blurred.py  ImageNet100_adaptibe.py  __init__.py  base.py  bcn.py  chest_xray.py  disentangling.py  fgvc_aircraft.py  food101.py  ham10k.py  iiit5k.py  isic.py  melanoma.py  paint.py  readme.md  rta100.py  scam.py  unsplash.py  utils.py
experiments/: plot_config.py
experiments/analysis/: compare_baselines.py
experiments/eval/: ocr_eval.py  retrieval_eval.py  run_all_blur_baselines.py  run_blur_baseline_eval.py  zeroshot_eval.py
experiments/greedy_selection/: greedy_selection.py
experiments/linear_probes/: probe_object_and_typo.py
experiments/plots/: plot_ablation_curves.py  plot_probe_performance.py  plot_qualitative_sample_medical.py  plot_typographic_scores.py  plot_zero_shot_accuracy_barplot.py  plots.py  (+3 more)
utils/: non_nv.py
(+5 files in other folders)
